# Chess

./: Board.cpp  Board.h  CMakeCache.txt  CMakeLists.txt  Chess.txt  Engine.cpp  Engine.h  Game.cpp  Game.h  Makefile  MoveCalculator.cpp  MoveCalculator.h  MoveRecorder.cpp  MoveRecorder.h  NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h  Print.cpp  Print.h  README.md  cmake_install.cmake  main.cpp  mainCli.cpp
test/: BoardTest.cpp  MoveCalculatorPossibleSquares2DArrayTest.Results  MoveCalculatorPossibleSquares2DArrayTest.cpp  README.md
